# iro-chess-gui

./: .clang-format  .clangd  .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt  README.md  chess_engine.cpp  iro_chess_movegen_jni.cpp  position.cpp  position.h  tables.cpp  tables.h  types.cpp  types.h
src/main/java/com/iro/: Main.java
src/main/java/com/iro/board/: Board.java  BoardState.java  CapturedPieces.java  MoveTypeEnum.java  Moves.java  NativeBoard.java  NativeMoveGen.java  Perft.java  PieceEnum.java  SquareEnum.java
src/main/java/com/iro/engine/: UciClient.java
src/main/java/com/iro/gui/: GamePanel.java  Mouse.java
src/main/java/com/iro/piece/: BlackBishop.java  BlackKing.java  BlackKnight.java  BlackPawn.java  BlackQueen.java  BlackRook.java  Piece.java  PieceFactory.java  WhiteBishop.java  WhiteKing.java  WhiteKnight.java  WhitePawn.java  WhiteQueen.java  WhiteRook.java
src/main/resources/engine/mac/: iro-chess
